added: themes tab

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -9,3 +9,13 @@ html {
 body {
    font-family: "Inter", sans-serif;
 }
+
+.scrollbar-hide {
+  scrollbar-width: none;
+
+  -ms-overflow-style: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
